proc-macros/tests/ui/incorrect/sub/sub_no_name.stderr
error: Missing argument `name`
 --> $DIR/sub_no_name.rs:6:4
  |
6 |     #[subscription(item = String)]
  |       ^^^^^^^^^^^^
